--- a/_config.yml
+++ b/_config.yml
@@ -2,5 +2,5 @@ theme: jekyll-theme-slate
 logo: images/ai_64.png
 name: TxHammer - DigiTech
 title: Current Projects
-subtitle:
+tagline:
 markdown: kramdown
