--- a/_config.yml
+++ b/_config.yml
@@ -2,5 +2,5 @@ theme: jekyll-theme-minimal
 logo: images/ai_64.png
 name: TxHammer - DigiTech
 title: Current Projects
-tagline:
+tagline: Developing web,js,qml skills
 markdown: kramdown
