--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,5 @@
 theme: jekyll-theme-minimal
 logo: images/ai_64.png
 name: TxHammer - DigiTech
-title: Current Projects
+title: Projects
 tagline: Developing web,js,qml skills
-markdown: kramdown
