--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ theme: jekyll-theme-minimal
 logo: images/ai_64.png
 name: TxHammer - DigiTech
 title: Projects
-tagline: Developing web,js,qml skills
+description: Developing web,js,qml skills
