--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,4 @@ logo: images/ai_64.png
 name: TxHammer - DigiTech
 title: Projects
 description: Developing web,js,qml skills
+url: https://github.com/txhammer68
