--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 theme: jekyll-theme-minimal
 logo: images/ai_64.png
 name: TxHammer - DigiTech
+author: TxHammer
 title: Projects
 description: Developing Web,JS,QML Skills
 url: https://github.com/txhammer68
