--- a/_config.yml
+++ b/_config.yml
@@ -5,5 +5,7 @@ author: TxHammer
 title: Projects
 description: Developing Web,JS,QML Skills
 url: https://github.com/txhammer68
-# baseurl: ""
+baseurl: "/docs"
 markdown: kramdown
+input: GFM
+github: https://github.com/txhammer68
