--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-minimal
+# theme: jekyll-theme-minimal
 logo: images/ai_64.png
 name: TxHammer - DigiTech
 author: TxHammer
@@ -10,3 +10,4 @@ markdown: kramdown
 input: GFM
 github: https://github.com/txhammer68
 github_username: txhammer68
+remote_theme: nielsenramon/chalk
