--- a/_config.yml
+++ b/_config.yml
@@ -10,4 +10,4 @@ markdown: kramdown
 input: GFM
 github: https://github.com/txhammer68
 github_username: txhammer68
-remote_theme: nielsenramon/chalk
+remote_theme: mmistakes/minimal-mistakes
