--- a/_config.yml
+++ b/_config.yml
@@ -11,4 +11,4 @@ input: GFM
 github: https://github.com/txhammer68
 github_username: txhammer68
 plugins: jekyll-remote-theme
-remote_theme: github/pages-gem
+remote_theme: rohanchandra/type-theme
