--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 # theme: jekyll-theme-minimal
+theme: txhammer68/chalk
 logo: images/ai_64.png
 name: TxHammer - DigiTech
 author: TxHammer
@@ -11,4 +12,4 @@ input: GFM
 github: https://github.com/txhammer68
 github_username: txhammer68
 plugins: jekyll-remote-theme
-remote_theme: txhammer68/chalk
+# remote_theme: txhammer68/chalk
