--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-# theme: jekyll-theme-minimal
-theme: txhammer68/chalk
+theme: jekyll-theme-minimal
+# theme: txhammer68/chalk
 logo: images/ai_64.png
 name: TxHammer - DigiTech
 author: TxHammer
