--- a/_config.yml
+++ b/_config.yml
@@ -11,5 +11,5 @@ markdown: kramdown
 input: GFM
 github: https://github.com/txhammer68
 github_username: txhammer68
-plugins: jekyll-remote-theme
+# plugins: jekyll-remote-theme, jekyll-include-cache
 # remote_theme: txhammer68/chalk
