--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # theme: jekyll-theme-minimal
 # theme: txhammer68/chalk
-remote_theme: "mmistakes/minimal-mistakes@4.17.0"
+remote_theme: txhammer68/minimal-mistakes
 logo: images/ai_64.png
 name: TxHammer - DigiTech
 author: TxHammer
