--- a/_config.yml
+++ b/_config.yml
@@ -7,10 +7,10 @@ author: TxHammer
 title: Projects
 description: Developing Web,JS,QML Skills
 url: https://github.com/txhammer68
-# baseurl: "../"
+baseurl: "../"
 markdown: kramdown
 input: GFM
 github: https://github.com/txhammer68
 github_username: txhammer68
-# plugins: jekyll-remote-theme, jekyll-include-cache
+plugins: jekyll-remote-theme, jekyll-include-cache
 # remote_theme: txhammer68/chalk
