--- a/_config.yml
+++ b/_config.yml
@@ -14,3 +14,5 @@ github: https://github.com/txhammer68
 github_username: txhammer68
 plugins: jekyll-remote-theme, jekyll-include-cache
 # remote_theme: txhammer68/chalk
+
+theme: jekyll-theme-slate
