--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,9 @@ input: GFM
 github: https://github.com/txhammer68
 github_username: txhammer68
 repository: txhammer68
-# plugins: jekyll-remote-theme, jekyll-include-cache
+plugins: 
+- jekyll-remote-theme
+- jekyll-include-cache
 # remote_theme: txhammer68/chalk
 logo: images/bk2-small.png
 # theme: jekyll-theme-slate
