--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 theme: jekyll-theme-minimal
 # theme: txhammer68/chalk
 # theme: txhammer68/myweb
-logo: images/yosimte-sam3.png
+# logo: images/yosimte-sam3.png
 name: TxHammer - DigiTech
 author: TxHammer
 title: KDE Plasma Customizations
