--- a/_config.yml
+++ b/_config.yml
@@ -6,11 +6,11 @@ name: TxHammer - DigiTech
 author: TxHammer
 title: KDE Plasma Customizations
 description: Hacking the Web,JS,QML
-url: https://github.com/txhammer68./
-# baseurl: "../"
+url: https://github.com/txhammer68
+baseurl: ../
 markdown: kramdown
 input: GFM
-github: https://github.com/txhammer68./
+github: https://github.com/txhammer68
 github_username: txhammer68
 repository: txhammer68
 plugins: 
