--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ author: TxHammer
 title: KDE Plasma Customizations
 description: Hacking the Web,JS,QML
 url: https://github.com/txhammer68
-baseurl: ./
+# baseurl: ./
 markdown: kramdown
 input: GFM
 github: https://github.com/txhammer68
