--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ theme: jekyll-theme-minimal
 # remote_theme: chrisrhymes/bulma-clean-theme
 # theme: txhammer68/chalk
 # theme: txhammer68/myweb
-# logo: images/yosimte-sam3.png
+logo: images/yosimte-sam3.png
 name: TxHammer - DigiTech
 author: TxHammer
 title: KDE Plasma Customizations
