--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ theme: jekyll-theme-minimal
 logo: images/yosimte-sam3.png
 name: TxHammer - DigiTech
 author: TxHammer
-title: KDE Plasma Customizations
+title:TxHammer
 description: Hacking the Web,JS,QML
 url: https://github.com/txhammer68
 # baseurl: ./
