--- a/_config.yml
+++ b/_config.yml
@@ -6,9 +6,9 @@ logo: images/yosimte-sam3.png
 name: TxHammer - DigiTech
 author: TxHammer
 title: TxHammer
-description: Hacking the Web
+description:    Hacking the Web
 url: https://github.com/txhammer68
-# baseurl: ./
+baseurl: ./
 markdown: kramdown
 input: GFM
 github: https://github.com/txhammer68
