--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-theme: jekyll-theme-minimal
-# remote_theme: chrisrhymes/bulma-clean-theme
+# theme: jekyll-theme-minimal
+remote_theme: chrisrhymes/bulma-clean-theme
 # theme: txhammer68/chalk
 # theme: txhammer68/myweb
 logo: images/yosimte-sam3.png
@@ -8,7 +8,7 @@ author: TxHammer
 title: TxHammer
 description:    Hacking the Web
 url: https://github.com/txhammer68
-baseurl: ./
+#baseurl: ./
 markdown: kramdown
 input: GFM
 github: https://github.com/txhammer68
