--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # remote_theme: pages-themes/midnight@v0.2.0
-remote_theme: pages-themes/forty
+theme: enfield-jekyll-theme
 # theme: jekyll-theme-minimal
 # remote_theme: chrisrhymes/bulma-clean-theme
 # theme: txhammer68/forty
