--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-remote_theme: pages-themes/midnight@v0.2.0
+remote_theme: mmistakes/jekyll-theme-basically-basic
 # remote_theme: streetturtle/jekyll-clean-dark
 # blog_theme: dark # Or use dark
 # theme: jekyll-theme-minimal
