--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ titles_from_headings:
 remote_theme: jekyll/minima
 minima:
   skin: dark
-  logo: images/yosimte-sam3.png
+  logo: images/yosimte-sam.png
 header_pages:
   - index.md
   - kubuntu.md
@@ -19,7 +19,7 @@ header_pages:
 # https://github.com/topics/jekyll-theme
 # https://pages.github.com/themes/
 #  https://drjekyllthemes.github.io/
-logo: images/yosimte-sam3.png
+logo: images/yosimte-sam.png
 name: TxHammer - DigiTech
 author: TxHammer
 title: TxHammer
