--- a/_config.yml
+++ b/_config.yml
@@ -22,13 +22,13 @@ title_image: "images/yosimte-sam.png"
 logo: images/yosimte-sam.png
 name: TxHammer - DigiTech
 author: TxHammer
-title: TxHammer
-description:    Hacking the Web
+description: Hacking the Web
 url: https://github.com/txhammer68
 #baseurl: ./
 markdown: kramdown
 input: GFM
 github: https://github.com/txhammer68
 github_username: txhammer68
+reddit_username: txhammer68
 repository: txhammer68
 paypal: "https://www.paypal.com/paypalme/taylorcm68"
