--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,7 @@ titles_from_headings:
   collections: true
 remote_theme:   cotes2020/jekyll-theme-chirpy
 theme_mode: dark
+avatar: 'images/yosimte-sam.png'
 title: "Hacking the web"
 description: "Personal notes for linux,coding,web."
 title_image: "images/yosimte-sam.png"
