--- a/_config.yml
+++ b/_config.yml
@@ -3,14 +3,14 @@ titles_from_headings:
   enabled:     true
   strip_title: true
   collections: true
-remote_theme:   cotes2020/jekyll-theme-chirpy
+# remote_theme:   cotes2020/jekyll-theme-chirpy
 theme_mode: dark
 avatar: 'images/yosimte-sam.png'
 title: "Hacking the web"
 description: "Personal notes for linux,coding,web."
 title_image: "images/yosimte-sam.png"
 # blog_theme: dark # Or use dark
-# theme: minima
+theme: chirpy
 # remote_theme: jekyll/minima
 #minima:
  # skin: dark
