--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,8 @@ avatar: "images/yosimte-sam.png"
 title: "Hacking the web"
 description: "Personal notes for linux,coding,web."
 title_image: "images/yosimte-sam.png"
-theme: chirpy
+# theme: chirpy
+remote_theme:  cotes2020/jekyll-theme-chirpy
 # remote_theme: jekyll/minima
 #minima:
  # skin: dark
