--- a/_config.yml
+++ b/_config.yml
@@ -5,9 +5,9 @@ description: "Personal notes for linux,coding,web."
 title_image: "images/yosimte-sam.png"
 theme: tactile
 # remote_theme: jekyll/minima
-tactile:
-  skin: dark
-  avatar: images/yosimte-sam.png
+# tactile:
+ # skin: dark
+  # avatar: images/yosimte-sam.png
 # remote_theme: chrisrhymes/bulma-clean-theme
 # theme: txhammer68/forty
 # theme: txhammer68/myweb
