--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,9 @@ avatar: "images/yosimte-sam.png"
 title: "Hacking the web"
 description: "Personal notes for linux,coding,web."
 title_image: "images/yosimte-sam.png"
-theme: tactile
+remote_theme: pages-themes/tactile@v0.2.0
+plugins:
+- jekyll-remote-theme
 # remote_theme: jekyll/minima
 # tactile:
  # skin: dark
