--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@ avatar: "images/yosimte-sam.png"
 # title: "Hacking the web"
 description: "Personal notes for linux,coding,web."
 title_image: "images/yosimte-sam.png"
-theme: jekyll-theme-midnight
+theme: pages-themes/primer@v0.2.0
 # remote_theme: pages-themes/tactile@v0.2.0
-# plugins:
-# - jekyll-remote-theme
+plugins:
+- jekyll-remote-theme
 # remote_theme: jekyll/minima
 # tactile:
  # skin: dark
