--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@ avatar: "images/yosimte-sam.png"
 # title: "Hacking the web"
 description: "Personal notes for linux,coding,web."
 title_image: "images/yosimte-sam.png"
-# theme: pages-themes/primer@v0.2.0
-remote_theme: pages-themes/minimal@v0.2.0
+theme: just-the-docs
+# remote_theme: pages-themes/minimal@v0.2.0
 plugins:
 - jekyll-remote-theme
 # remote_theme: jekyll/minima
