--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ plugins:
 - jekyll-remote-theme
 # remote_theme: jekyll/minima
 # tactile:
- # skin: dark
+ skin: dark
   # avatar: images/yosimte-sam.png
 # remote_theme: chrisrhymes/bulma-clean-theme
 # theme: txhammer68/forty
