--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,8 @@
 theme_mode: dark
 avatar: "images/yosimte-sam.png"
+favicon_ico: "images/yosimte-sam.png"
+logo:  "images/yosimte-sam.png"
+nav_enabled: true
 # title: "Hacking the web"
 description: "Personal notes for linux,coding,web."
 title_image: "images/yosimte-sam.png"
