--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,3 @@
-theme_mode: dark
 avatar: "images/yosimte-sam.png"
 favicon_ico: "images/yosimte-sam.png"
 logo:  "images/yosimte-sam.png"
@@ -7,21 +6,11 @@ nav_enabled: true
 description: "Personal notes for linux,coding,web."
 title_image: "images/yosimte-sam.png"
 theme: just-the-docs
+theme_mode: dark
 color_scheme: dark
 # remote_theme: pages-themes/minimal@v0.2.0
-plugins:
-- jekyll-remote-theme
-# remote_theme: jekyll/minima
-# tactile:
- # skin: dark
-  # avatar: images/yosimte-sam.png
-# remote_theme: chrisrhymes/bulma-clean-theme
-# theme: txhammer68/forty
-# theme: txhammer68/myweb
-# https://github.com/topics/jekyll-theme
-# https://pages.github.com/themes/
-#  https://drjekyllthemes.github.io/
-logo: images/yosimte-sam.png
+#plugins:
+#- jekyll-remote-theme
 name: TxHammer - DigiTech
 author: TxHammer
 description: Hacking the Web
