--- a/_config.yml
+++ b/_config.yml
@@ -6,12 +6,12 @@ layout: default
 # title: "Hacking the web"
 description: "Personal notes for linux,coding,web."
 title_image: "images/yosimte-sam.png"
-theme: just-the-docs
+# theme: just-the-docs
 theme_mode: dark
 color_scheme: dark
-# remote_theme: pages-themes/minimal@v0.2.0
-#plugins:
-#- jekyll-remote-theme
+remote_theme: just-the-docs
+plugins:
+ jekyll-remote-theme
 name: TxHammer - DigiTech
 author: TxHammer
 description: Hacking the Web
